<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:id="@+id/_1stImage"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="24dp"
       android:layout_marginTop="24dp"
       android:src="@drawable/donut_circle"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/_1stText"
       android:contentDescription="@string/donut_contentDescription"/>
   <ImageView
       android:id="@+id/_2ndImage"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/_1stImage"
       app:layout_constraintLeft_toLeftOf="parent"
       android:src="@drawable/icecream_circle"
       android:layout_marginStart="24dp"
       android:layout_marginTop="24dp"
       android:contentDescription="@string/iceCream_contentDescription"
       />
   <ImageView
       android:id="@+id/_3thImage"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/_2ndImage"
       app:layout_constraintLeft_toLeftOf="parent"
       android:src="@drawable/froyo_circle"
       android:layout_marginStart="24dp"
       android:layout_marginTop="24dp"
       android:contentDescription="@string/froyo_contentDescription"
       />
   <TextView
       android:id="@+id/_1stText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/head"
       android:textSize="30sp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:layout_marginTop="8dp"
       app:layout_constraintTop_toTopOf="parent"
       />
   <TextView
       android:id="@+id/_2ndText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:text="@string/donut"
       android:textAlignment="textStart"
       android:textSize="15sp"
       android:layout_marginVertical="35dp"
       android:layout_marginEnd="24dp"
       android:layout_marginStart="24dp"
       app:layout_constraintStart_toEndOf="@+id/_1stImage"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/_1stText" />
   <TextView
       android:id="@+id/_3thText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:text="@string/iceCream"
       android:textAlignment="textStart"
       android:textSize="15sp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       android:layout_marginVertical="35dp"
       app:layout_constraintStart_toEndOf="@id/_2ndImage"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/_1stImage"
        />
   <TextView
       android:id="@+id/_4thText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:text="@string/iceCream"
       android:textAlignment="textStart"
       android:textSize="15sp"
       android:layout_marginVertical="35dp"
       android:layout_marginStart="24dp"
       android:layout_marginEnd="24dp"
       app:layout_constraintTop_toBottomOf="@id/_2ndImage"
       app:layout_constraintStart_toEndOf="@id/_3thImage"
       app:layout_constraintEnd_toEndOf="parent"
       />

   <Button
       android:id="@+id/_1stButton"
       style="@style/Widget.AppCompat.Button.Colored"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_1stbtn"
       android:textColorHighlight="@color/colorAccent"
       android:textColorLink="@color/colorAccent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   

</androidx.constraintlayout.widget.ConstraintLayout>